--- a/project/css/main.css
+++ b/project/css/main.css
@@ -115,3 +115,54 @@ input[type=radio]:checked + label {
   border-radius: 2px;
   padding: 20px 180px;
   display: inline-block; }
+
+.footer {
+  margin: 120px 0px 50px 0px; }
+
+.footer__text {
+  color: #9197a3;
+  font-family: "Georgia", sans-serif;
+  font-size: 11px;
+  margin-bottom: 10px;
+  text-align: center; }
+
+.footer__title {
+  color: #333743;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 22px;
+  text-align: center; }
+
+.footer__item {
+  display: inline-block;
+  width: 20%; }
+
+.footer__item_img {
+  display: block;
+  margin-bottom: 17px; }
+
+.footer__item_description {
+  padding: 0px 10px; }
+
+.footer__item_name {
+  display: inline-block;
+  text-transform: uppercase;
+  color: #333743;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 5px; }
+
+.footer__item_price {
+  color: #9197a3;
+  font-family: "Georgia", sans-serif;
+  font-size: 13px;
+  float: right; }
+
+.footer__item_category {
+  display: block;
+  color: #9197a3;
+  font-family: "Georgia", sans-serif;
+  font-size: 11px; }
