--- a/project/scss/product.scss
+++ b/project/scss/product.scss
@@ -62,7 +62,7 @@
 	padding-bottom: 10px;
 }
 .product__description_text{
-	color: #9197a3;
+	color: $text__color;
 	font-family: $font__Georgia;
 	font-size: 12px;
 	line-height: 1.5;
