Change to footer

--- a/project/css/footer.css
+++ b/project/css/footer.css
@@ -23,7 +23,8 @@
 
 .footer__item_img {
   display: block;
-  margin-bottom: 17px; }
+  margin-bottom: 17px;
+  width: 100%; }
 
 .footer__item_description {
   padding: 0px 10px; }
@@ -48,3 +49,7 @@
   color: #9197a3;
   font-family: "Georgia", sans-serif;
   font-size: 11px; }
+
+@media screen and (max-width: 1200px) and (min-width: 993px) {
+  .container {
+    width: 955px; } }
