--- a/project/scss/footer.scss
+++ b/project/scss/footer.scss
@@ -26,6 +26,7 @@
 .footer__item_img{
 	display: block;
 	margin-bottom: 17px;
+	width: 100%;
 }
 .footer__item_description{
 	padding: 0px 10px;
@@ -50,4 +51,10 @@
 	color: $text__color;
 	font-family: $font__Georgia;
 	font-size: 11px;
+}
+
+@media screen and (max-width: 1200px) and (min-width: 993px) {
+    .container{
+		width: 955px;
+	}	
 }
