--- a/project/css/footer.css
+++ b/project/css/footer.css
@@ -1,6 +1,9 @@
 .footer {
   margin: 120px 0px 50px 0px; }
 
+.footer_wrapper {
+  text-align: center; }
+
 .footer__text {
   color: #9197a3;
   font-family: "Georgia", sans-serif;
@@ -19,15 +22,17 @@
 
 .footer__item {
   display: inline-block;
-  width: 20%; }
+  margin-right: 10px;
+  margin-bottom: 20px;
+  width: 256px; }
 
 .footer__item_img {
-  display: block;
   margin-bottom: 17px;
   width: 100%; }
 
 .footer__item_description {
-  padding: 0px 10px; }
+  padding: 0px 10px;
+  text-align: left; }
 
 .footer__item_name {
   display: inline-block;
@@ -52,4 +57,16 @@
 
 @media screen and (max-width: 1200px) and (min-width: 993px) {
   .container {
-    width: 955px; } }
+    width: 970px; } }
+
+@media screen and (max-width: 993px) and (min-width: 769px) {
+  .container {
+    width: 750px; } }
+
+@media screen and (max-width: 769px) and (min-width: 480px) {
+  .container {
+    width: 100%; } }
+
+@media screen and (max-width: 480px) and (min-width: 320px) {
+  .container {
+    width: 100%; } }
