--- a/project/css/main.css
+++ b/project/css/main.css
@@ -82,29 +82,49 @@
   margin: auto;
   margin-top: 20px; }
 
-.product__colors {
-  float: left; }
-
-.clear {
-  clear: both; }
-
 input[type=radio] {
   display: none; }
 
 input[type=radio] + label {
-  background: url(../images/circle.png) no-repeat; }
+  background: url(../images/circle.png) no-repeat left center; }
 
 input[type=radio]:checked + label {
   background: url(../images/check.png) no-repeat; }
 
+.fa-stop_blue {
+  color: #9fcede;
+  margin-right: 10px; }
+
+.fa-stop_brown {
+  color: #333743;
+  margin-right: 10px; }
+
+.product__colors {
+  margin: 50px 0px 75px 50px; }
+
 .product__colors_choice {
-  display: block; }
+  display: block;
+  text-align: left;
+  padding-left: 25px;
+  color: #9197a3;
+  font-family: "Georgia", sans-serif;
+  font-size: 13px;
+  margin-bottom: 17px; }
+
+.product__colors_choice_blue {
+  color: #333743; }
 
 .product__colors_title {
   color: #333743;
   font-family: "PT Sans", sans-serif;
   font-size: 13px;
-  font-weight: bold; }
+  font-weight: bold;
+  text-align: left;
+  margin-left: 25px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #dbdde5;
+  padding-bottom: 10px;
+  width: 30%; }
 
 .product__button {
   text-decoration: none;
@@ -118,6 +138,9 @@ input[type=radio]:checked + label {
 
 .footer {
   margin: 120px 0px 50px 0px; }
+
+.footer_wrapper {
+  text-align: center; }
 
 .footer__text {
   color: #9197a3;
@@ -137,15 +160,17 @@ input[type=radio]:checked + label {
 
 .footer__item {
   display: inline-block;
-  width: 20%; }
+  margin-right: 10px;
+  margin-bottom: 20px;
+  width: 256px; }
 
 .footer__item_img {
-  display: block;
   margin-bottom: 17px;
   width: 100%; }
 
 .footer__item_description {
-  padding: 0px 10px; }
+  padding: 0px 10px;
+  text-align: left; }
 
 .footer__item_name {
   display: inline-block;
@@ -170,4 +195,16 @@ input[type=radio]:checked + label {
 
 @media screen and (max-width: 1200px) and (min-width: 993px) {
   .container {
-    width: 955px; } }
+    width: 970px; } }
+
+@media screen and (max-width: 993px) and (min-width: 769px) {
+  .container {
+    width: 750px; } }
+
+@media screen and (max-width: 769px) and (min-width: 480px) {
+  .container {
+    width: 100%; } }
+
+@media screen and (max-width: 480px) and (min-width: 320px) {
+  .container {
+    width: 100%; } }
