--- a/project/scss/footer.scss
+++ b/project/scss/footer.scss
@@ -3,6 +3,9 @@
 .footer{
 	margin: 120px 0px 50px 0px;
 }
+.footer_wrapper{
+	text-align: center;
+}
 .footer__text{
 	color: $text__color;
 	font-family: $font__Georgia;
@@ -21,15 +24,17 @@
 }
 .footer__item{
 	display: inline-block;
-	width: 20%;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    width: 256px;
 }
 .footer__item_img{
-	display: block;
 	margin-bottom: 17px;
 	width: 100%;
 }
 .footer__item_description{
 	padding: 0px 10px;
+    text-align: left;
 }
 .footer__item_name{
 	display: inline-block;
@@ -55,6 +60,21 @@
 
 @media screen and (max-width: 1200px) and (min-width: 993px) {
     .container{
-		width: 955px;
+		width: 970px;
 	}	
+}
+@media screen and (max-width: 993px) and (min-width: 769px) {
+	.container{
+		width: 750px;
+	}
+}
+@media screen and (max-width: 769px) and (min-width: 480px) {
+	.container{
+		width: 100%;
+	}
+}
+@media screen and (max-width: 480px) and (min-width: 320px) {
+	.container{
+		width: 100%;
+	}
 }
