--- a/project/scss/main.scss
+++ b/project/scss/main.scss
@@ -1,4 +1,4 @@
 
-@import "./header.scss";
-@import "./product.scss";
-@import "./footer.scss";
+@import "./_header.scss";
+@import "./_product.scss";
+@import "./_footer.scss";
