--- a/project/scss/_footer.scss
+++ b/project/scss/_footer.scss
@@ -28,6 +28,9 @@
     margin-bottom: 20px;
     width: 230px;
 }
+.footer__item_link{
+	text-decoration: none;
+}
 .footer__item_img{
 	margin-bottom: 17px;
 	width: 100%;
