--- a/project/scss/_header.scss
+++ b/project/scss/_header.scss
@@ -3,8 +3,10 @@
 .header{
 	padding: 25px 35px;
 	box-shadow: 0 2px 9px rgba(189,189,189,.5);
-	margin-bottom: 50px;
-	position: relative;
+	position: absolute;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: #fff;
 }
 .header__logo{
 	display: inline-block;
@@ -43,7 +45,7 @@
 }
 .header__account{
 	float: right;
-	margin-top: 8px;
+	margin-top: 5px;
 }
 .header__account-bag{
 	display: inline-block;
@@ -59,6 +61,10 @@
 	font-family: $font__Georgia;
 	font-size: 11px;
 	margin-left: 15px;
+	display: inline-block;
+    height: 25px;
+    width: 25px;
+    box-sizing: border-box;
 }
 .header__account-registration{
 	display: inline-block;
