--- a/project/scss/_product.scss
+++ b/project/scss/_product.scss
@@ -9,6 +9,9 @@
 	width: 1200px;
 	margin: 0 auto;
 }
+.product{
+	padding-top: 135px;
+}
 .product__gallery{
 	display: inline-block;
 	width: 50%;
@@ -130,6 +133,7 @@ input[type=radio]:checked + label{
 	border-radius: 2px;
 	padding: 20px 180px;
 	display: inline-block;
+	&:hover{opacity:0.9;}
 }
 
 @media screen and (max-width: 1200px) and (min-width: 993px) {
