Changes to scss files

--- a/project/scss/_header.scss
+++ b/project/scss/_header.scss
@@ -1,5 +1,6 @@
 @import "./_variables.scss";
 
+/*-----header----------*/
 .header{
 	padding: 25px 35px;
 	box-shadow: 0 2px 9px rgba(189,189,189,.5);
@@ -207,3 +208,5 @@
     	display: block;
 	}
 }
+
+/*----- header-end ----------*/
