--- a/project/scss/_product.scss
+++ b/project/scss/_product.scss
@@ -1,5 +1,7 @@
 @import "./_variables.scss";
 
+/*-----product----------*/
+
 .clearfix:after{
     content: '';
     clear: both;
@@ -271,3 +273,5 @@ input[type=radio]:checked + label{
 		padding: 20px 79px;
 	}
 }
+
+/*----- product-end ---------*/
