--- a/project/css/main.css
+++ b/project/css/main.css
@@ -1,3 +1,4 @@
+/*-----header----------*/
 .header {
   padding: 25px 35px;
   box-shadow: 0 2px 9px rgba(189, 189, 189, 0.5);
@@ -181,6 +182,8 @@
   .responsive {
     display: block; } }
 
+/*----- header-end ----------*/
+/*-----product----------*/
 .clearfix:after {
   content: '';
   clear: both;
@@ -413,6 +416,8 @@ input[type=radio]:checked + label {
   .product__button {
     padding: 20px 79px; } }
 
+/*----- product-end ---------*/
+/*-----footer----------*/
 .footer {
   margin: 120px 0px 50px 0px; }
 
@@ -488,3 +493,5 @@ input[type=radio]:checked + label {
 @media screen and (max-width: 480px) and (min-width: 320px) {
   .container {
     width: 100%; } }
+
+/*----- footer-end ---------*/
