--- a/project/scss/_footer.scss
+++ b/project/scss/_footer.scss
@@ -1,5 +1,7 @@
 @import "./_variables.scss";
 
+/*-----footer----------*/
+
 .footer{
 	margin: 120px 0px 50px 0px;
 }
@@ -81,3 +83,4 @@
 		width: 100%;
 	}
 }
+/*----- footer-end ---------*/
