--- a/project/scss/_product.scss
+++ b/project/scss/_product.scss
@@ -82,14 +82,22 @@
 	margin: auto;
 	margin-top: 20px;
 }
+.product__colors_not-check{
+	margin-right: 15px;
+}
+.product__colors_check{
+	display: none;
+	margin-right: 15px;
+}
 input[type=radio]{
 	display: none;
 }
-input[type=radio] + label{
-	background: url(../images/circle.png) no-repeat left center;
+input[type=radio]:checked + label .product__colors_check{
+	display: inline-block;
+	color: #333743;
 }
-input[type=radio]:checked + label{
-	background: url(../images/check.png) no-repeat;
+input[type=radio]:checked + label .product__colors_not-check{
+	display: none;
 }
 .fa-stop_blue{
 	color: #9fcede;
@@ -105,7 +113,6 @@ input[type=radio]:checked + label{
 .product__colors_choice{
 	display: block;
 	text-align: left;
-    padding-left: 25px;
     color: $text__color;
 	font-family: $font__Georgia;
 	font-size: 13px;
@@ -138,12 +145,10 @@ input[type=radio]:checked + label{
 	&:hover{opacity:0.9;}
 }
 
-@media screen and (max-width: 1200px) and (min-width: 993px) {
-    .container{
-		width: 970px;
-	}
+@media screen and (max-width: 1200px) and (min-width: 320px) {
 	.product__gallery_img{
 		display: inline-block;
+		margin-right: 15px;
 	}
 	.product__gallery{
 		text-align: center;
@@ -153,118 +158,68 @@ input[type=radio]:checked + label{
 		margin-top: 15px;
 		margin-right: 0px;
 	}
-	.product__gallery_img{
-		margin-right: 15px;
+}
+@media screen and (max-width: 993px) and (min-width: 320px) {
+	.product{
+		text-align: center;
+	}
+	.product__gallery{
+		width: 80%;
+	}
+	.product__colors_title{
+		width: 90%;
+		text-align: center;
+	}
+	.product__colors_choice{
+		display: inline-block;
+	}
+	.product__colors_choice_blue{
+		margin-right: 100px;
+	}
+}
+@media screen and (max-width: 769px) and (min-width: 320px) {
+	.container{
+		width: 100%;
+	}
+	.product__colors{
+		margin: 50px 0px 75px 0px;
+	}
+	.product__colors_choice{
+		display: inline-block;
+	}
+}
+@media screen and (max-width: 1200px) and (min-width: 993px) {
+    .container{
+		width: 970px;
 	}
 }
 @media screen and (max-width: 993px) and (min-width: 769px) {
 	.container{
 		width: 750px;
 	}
-	.product{
-		text-align: center;
-	}
-	.product__gallery_img{
-		display: inline-block;
-		margin-right: 15px;
-	}
-	.product__gallery_small-img{
-		float: none;
-		margin-top: 15px;
-		margin-right: 0px;
-	}
-	.product__gallery{
-		text-align: center;
-		width: 80%;
-	}
 	.product__colors_title{
-		width: 90%;
-		text-align: center;
 		margin-left: 0px;
-	}
-	.product__colors_choice{
-		display: inline-block;
-	}
-	.product__colors_choice_blue{
-		margin-right: 100px;
 	}
 }
 @media screen and (max-width: 769px) and (min-width: 480px) {
-	.container{
-		width: 100%;
-	}
-	.product{
-		text-align: center;
-	}
+
 	.product__gallery_main-img{
 		width: 400px;
-	}
-	.product__gallery_img{
-		display: inline-block;
-		margin-right: 15px;
-	}
-	.product__gallery_small-img{
-		float: none;
-		margin-top: 15px;
-		margin-right: 0px;
-	}
-	.product__gallery{
-		text-align: center;
-		width: 80%;
-	}
-	.product__colors{
-		margin: 50px 0px 75px 0px;
-	}
-	.product__colors_title{
-		width: 90%;
-		text-align: center;
-	}
-	.product__colors_choice{
-		display: inline-block;
-	}
-	.product__colors_choice_blue{
-		margin-right: 100px;
 	}
 	.product__button{
 		padding: 20px 140px;
 	}
 }
 @media screen and (max-width: 480px) and (min-width: 320px) {
-	.container{
-		width: 100%;
-	}
-	.product{
-		text-align: center;
-	}
 	.product__gallery_main-img{
 		width: 100%;
-	}
-	.product__gallery_img{
-		display: inline-block;
-		margin-right: 15px;
-	}
-	.product__gallery_small-img{
-		float: none;
-		margin-top: 15px;
-		margin-right: 0px;
-	}
-	.product__gallery{
-		text-align: center;
-		width: 80%;
 	}
 	.product__title{
 		width: 90%;
 	}
-	.product__colors{
-		margin: 50px 0px 75px 0px;
-	}
 	.product__colors_title{
 		width: 100%;
-		text-align: center;
 		margin-left: 0px;
-	}
-	.product__colors_choice{
-		display: inline-block;
 	}
 	.product__colors_choice_blue{
 		margin-right: 20px;
